compiler/tests/ar/errors/pure_vec_mut.salam
// لغة: العربية
// توقع: E012
نقي دالة املأ(عدد : صحيح) : صحيح:
    متغير متجه := Vector {} بوصفه Vector<صحيح>
    متجه.push(عدد)
    أرجع متجه.len()
نهاية

دالة الرئيسية:
    اطبع(املأ(3))
نهاية
